@startuml

title __TEMPLATE's Class Diagram__\n

  namespace vendingmachine.template {
    class vendingmachine.template.KerryVendingReceipt {
        + KerryVendingReceipt()
        + item()
    }
  }
  

  namespace vendingmachine.template {
    abstract class vendingmachine.template.Receipt {
        + printReceipt()
        # footer()
        # header()
        {abstract} ~ item()
    }
  }
  

  vendingmachine.template.KerryVendingReceipt -up-|> vendingmachine.template.Receipt
  vendingmachine.template.KerryVendingReceipt o-- vendingmachine.decorator.Beverage : beverage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
